--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <label for="pesan" class="form-label">Pesan</label>
                 <textarea class="form-control" placeholder="Tinggalkan Pesan disini" id="pesan" style="height: 100px"></textarea>
               </div>
-              <button type="submit" class="btn btn-success">Submit</button>
+              <button type="submit" class="btn btn-success">Kirim</button>
             </form>
           </div>
         </div>
